# forge

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yaml
src/: config.rs  constants.rs  main.rs
src/commands/: add.rs  build.rs  clean.rs  init.rs  mod.rs  run.rs
src/templates/: add_templates.rs  init_templates.rs  mod.rs
src/utils/: compile_commands.rs  fs_utils.rs  mod.rs  shell_utils.rs  sys_utils.rs  vec_utils.rs
